apps/base/game/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game

---

apiVersion: v1
kind: Namespace
metadata:
  name: metrics
