apps/base/game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: game
spec:
  selector:
    app: postgres
  ports:
    - name: pg
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: game-web
  namespace: game
spec:
  type: NodePort
  selector:
    app: game-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
        #  type: ClusterIP
